Alignment fixed

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -19,6 +19,13 @@
     margin-right: 1rem;
 }
 
+.project-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
 .project-details h3 {
     margin: 0 0 0.5rem 0;
     color: #fff;
@@ -55,6 +62,12 @@
         margin-bottom: 0.8rem;
         width: 90px;
         height: 90px;
+    }
+    .project-details {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
     }
     .project-details h3 {
         font-size: 1.3rem;
